objects/Rebate_Agreement__c/Rebate_Agreement__c.object-meta.xml
<CustomObject>
    <label>Rebate Agreement</label>
    <nameField>
        <label>Rebate Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rebate Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>