objects/Rebate_Agreement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rebate Agreements</relationshipLabel>
    <relationshipName>Rebate_Agreements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>