objects/Rebate_Agreement__c/fields/Products_to_exclude__c.field-meta.xml
<CustomField>
    <fullName>Products_to_exclude__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Products to exclude</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Rebate Agreements (Products to exclude)</relationshipLabel>
    <relationshipName>Rebate_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>