objects/Rebate_Agreement__c/fields/Products_to_include__c.field-meta.xml
<CustomField>
    <fullName>Products_to_include__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Products to include</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Rebate Agreements</relationshipLabel>
    <relationshipName>Rebate_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>