objects/Rebate_Agreement__c/fields/Rebate_Tier__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Tier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rebate Tier</label>
    <referenceTo>Rebate_Tier__c</referenceTo>
    <relationshipLabel>Rebate Agreements</relationshipLabel>
    <relationshipName>Rebate_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>